# deepctx

./: README.md  pyproject.toml
examples/: wandb-tf-test.py
src/deepctx/: __init__.py
src/deepctx/integration/tensorflow/: devices.py
src/deepctx/scripting/: context.py
src/deepctx/scripting/module/: train_module.py  wandb_module.py
src/deepctx/scripting/module/tensorflow_module/: __init__.py
src/dl_utilities/: __init__.py  lazy.py
src/dl_utilities/integration/: __init__.py
src/dl_utilities/integration/tensorflow/: __init__.py  devices.py
src/dl_utilities/scripting/: __init__.py  context.py
src/dl_utilities/scripting/module/: rng.py  tensorflow.py  train.py  wandb.py
src/dl_utilities/scripting/module/tensorflow/: __init__.py
src/dl_utilities/utils/: lazyloading.py
test/mock/: mock_tensorflow.py
test/unit/integration/tensorflow/: __init__.py  devices_test.py
