[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dl-utilities"
version = "0.0.1"
authors = [
  { name="David Ludwig", email="davidludwigii@gmail.com" },
]
description = "A light-weight library of utilities designed for assisting writing scripts with deep-learning in mind."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "wandb >= 0.15.10"
]

[project.urls]
"Homepage" = "https://github.com/DLii-Research/dl-utilities"
"Bug Tracker" = "https://github.com/DLii-Research/dl-utilities/issues"

[tool.ruff]
line-length = 100
